[project]
name = "finance-agent"
version = "0.1.0"
description = "AI-powered personal finance tracking and management agent"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.38.0",
    "langgraph>=0.2.34",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
    "plotly>=5.24.0",
    "pydantic>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_agent"]